syntax = "proto3";

package secret.compute.v1beta1;

import "cosmos/base/v1beta1/coin.proto";

option java_package = "secret.compute.v1beta1";
option java_multiple_files = true;
option java_outer_classname = "Msg";

// MsgExecuteContract submits the given message data to a smart contract
message MsgExecuteContract {
  string sender = 1;
  string contract = 2;
  bytes msg = 3;
  string code_hash = 4;
  repeated cosmos.base.v1beta1.Coin sent_funds = 5;
}